--- a/App/Home/View/Huiyuan/add.html
+++ b/App/Home/View/Huiyuan/add.html
@@ -1,4 +1,5 @@
 <div class="bjui-pageContent tableContent">
+__MODULE__
     <form action="__URL__/add/navTabId/{:CONTROLLER_NAME}" class="pageForm" data-toggle="validate">
 		<input type="hidden" name="id" value="{$id}">
     <div class="pageFormContent" data-layout-h="0">
