--- a/App/Home/View/User/index.html
+++ b/App/Home/View/User/index.html
@@ -79,7 +79,7 @@
            <td>{$v.logintime}</td>
 		   <td>{$v.loginip}</td>
 		   <td>{$v.logins}</td>
-		   <php>if(display(CONTROLLER_NAME.'/lock')){</php><td><a href="__URL__/lock/id/{$v['id']}/navTabId/{:CONTROLLER_NAME}" data-toggle="doajax" data-confirm-msg="确定要操作吗？"><if condition="$v.status EQ 1 "><img src="__PUBLIC__/images/ok.gif" border="0"/><else/><img src="__PUBLIC__/images/locked.gif" border="0"/></if></a></td><php>}</php>
+		   <php>if(display(CONTROLLER_NAME.'/lock')){</php><td><a href="__URL__/lock/id/{$v['id']}/navTabId/{:CONTROLLER_NAME}" data-toggle="doajax" data-confirm-msg="确定要操作吗？"><if condition="$v.status EQ 1 "><img src="/Public/images/ok.gif" border="0"/><else/><img src="/Public/images/locked.gif" border="0"/></if></a></td><php>}</php>
 		   <php>if(display(CONTROLLER_NAME.'/edit')){</php><td> <a href="__URL__/edit/id/{$v['id']}/navTabId/{:CONTROLLER_NAME}"   class="btn btn-green btn-sm" data-toggle="dialog" data-width="600" data-height="450" data-id="dialog-mask" data-mask="true" >编辑</a></td><php>}</php>
          </tr> 
           </volist>
