--- a/App/Home/View/Chuku/add.html
+++ b/App/Home/View/Chuku/add.html
@@ -19,7 +19,7 @@
 						<th title="产品分类"><input type="text" name="xfenlei[#index#]" id="index[#index#].fenlei" type="text"  value="" size="10" ></th>
 						<th title="产品规格"><input type="text" name="xtype[#index#]"  id="index[#index#].type" size="10" value=""></th>
 						<th title="计量单位"><input type="text" name="xdanwei[#index#]"  id="index[#index#].danwei" size="10" value=""></th>
-						<th title="数量"><input type="text" name="xshuliang[#index#]" size="10" id="num#index#" value="0" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')"></th>
+                        <th title="数量"><input type="text" name="xshuliang[#index#]" size="10" id="num[#index#]" value="0" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')"></th>
 						<th title="备注"><input type="text" name="xbeizhu[#index#]" size="10"  value="" ><input type="hidden" name="xcid[#index#]" id="cid[#index#].cid"  size="10" value="" ></th>
 						<th title="" data-addtool="true" width="50">
                             <a href="__MODULE__/public/delok" class="btn btn-red row-del" data-confirm-msg="确定要删除该行信息吗？">删</a>
